--- a/frontend/locales/en.json
+++ b/frontend/locales/en.json
@@ -400,14 +400,14 @@
     "MacChecker": "Open MAC lookup panel"
   },
   "page": {
-    "title": "IPCheck.ing - Check My IP Address and Geolocation - Check WebRTC Connection IP - DNS Leak Test - Speed Test - Jason Ng Open Source",
+    "title": "IPCheck.ing - Check My IP Address and Geolocation - Check WebRTC Connection IP - DNS Leak Test - Speed Test",
     "description": "A better and open source IP Toolbox. Easy to check what's your IPs, IP information, check for DNS leaks, examine WebRTC connections, test website availability, lookup DNS record, lookup Whois, and test latency from around the world.",
     "keywords": "MyIP,IP Tool,My IP,IP check,IP lookup,DNS leak test,WebRTC test,Speed test,DNS lookup,Whois lookup, Ping test, privacy test",
-    "footerName": "Creators: Jason Ng, Seven Yu & ChatGPT",
-    "footerLink": "https://github.com/jason5ng32/MyIP",
-    "copyRightName": "Originally from ",
-    "copyRightLink": "https://ipcheck.ing",
-    "copyRightLinkName": "IPCheck.ing"
+    "footerName": "Have a good day!",
+    "footerLink": "https://szwcxrll.com",
+    "copyRightName": "Back to ",
+    "copyRightLink": "https://szwcxrll.com",
+    "copyRightLinkName": "Selection"
   },
   "helpModal": {
     "Title": "Keyboard Shortcuts"
