--- a/frontend/locales/fr.json
+++ b/frontend/locales/fr.json
@@ -463,9 +463,9 @@
         "description": "Une boîte à outils IP meilleure et open source. Facile à vérifier vos adresses IP, informations IP, vérifier les fuites DNS, examiner les connexions WebRTC, tester la disponibilité des sites web, rechercher des enregistrements DNS, rechercher des informations Whois et tester la latence dans le monde entier.",
         "keywords": "MonIP, Outil IP, Mon IP, Vérification IP, Recherche IP, Test de fuite DNS, Test WebRTC, Test de vitesse, Recherche DNS, Recherche Whois, Test de ping, Test de confidentialité",
         "footerName": "Bonne journée!",
-        "footerLink": "https://szwcxrll.com",
+        "footerLink": "https://aquapoetry.com",
         "copyRightName": "Retour à ",
-        "copyRightLink": "https://szwcxrll.com",
+        "copyRightLink": "https://aquapoetry.com",
         "copyRightLinkName": "Selection"
     },
     "helpModal": {
