--- a/frontend/locales/en.json
+++ b/frontend/locales/en.json
@@ -463,9 +463,9 @@
     "description": "A better and open source IP Toolbox. Easy to check what's your IPs, IP information, check for DNS leaks, examine WebRTC connections, test website availability, lookup DNS record, lookup Whois, and test latency from around the world.",
     "keywords": "MyIP,IP Tool,My IP,IP check,IP lookup,DNS leak test,WebRTC test,Speed test,DNS lookup,Whois lookup, Ping test, privacy test",
     "footerName": "Have a good day!",
-    "footerLink": "https://szwcxrll.com",
+    "footerLink": "https://aquapoetry.com",
     "copyRightName": "Back to ",
-    "copyRightLink": "https://szwcxrll.com",
+    "copyRightLink": "https://aquapoetry.com",
     "copyRightLinkName": "Selection"
   },
   "helpModal": {
