--- a/frontend/locales/zh.json
+++ b/frontend/locales/zh.json
@@ -463,9 +463,9 @@
     "description": "好用和开源的全能 IP 工具箱。轻松查看你的 IP 地址，IP 信息，检查 DNS 泄露，检查 WebRTC 连接，测试网站可用性，查找 DNS 记录，查找 Whois 信息，测试全球延迟测试等。",
     "keywords": "我的IP,IP工具,我的IP,IP查询,DNS泄漏测试,WebRTC测试,网速测试,DNS查询,Whois查询, Ping测试, 隐私测试",
     "footerName": "Have a good day!",
-    "footerLink": "https://szwcxrll.com",
+    "footerLink": "https://aquapoetry.com",
     "copyRightName": "Back to ",
-    "copyRightLink": "https://szwcxrll.com",
+    "copyRightLink": "https://aquapoetry.com",
     "copyRightLinkName": "Selection"
   },
   "helpModal": {
